--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,21 @@
-.grid {
-    width: 50px;
-    height: 50px;
-    background-color: blue;
-    border-style: solid;
+body {
+    display: flex;
+    justify-content: center;
+}
 
+#gridcontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 408px;
+    height: auto;
+    border-style: solid;
+    border-width: 1px;
+}
+
+.grid {
+    width: 100px;
+    height: 100px;
+    border-style: solid;
+    border-width: 1px;
 }
