--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ body {
 
 .slider {
     -webkit-appearance: none;
+    appearance: none;
     width: 100%;
     height: 25px;
     background: #d3d3d3;
