Adjust slider steps to 4 and slider with to 400px

--- a/styles.css
+++ b/styles.css
@@ -125,4 +125,5 @@ input[type=range]:focus::-ms-fill-upper {
     display: flex;
     flex-direction: column;
     align-items: center;
+    width: 400px;
 }
