--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,7 @@ body {
 input[type=range] {
   height: 35px;
   -webkit-appearance: none;
+  appearance: none;
   margin: 10px 0;
   width: 100%;
   background-color: transparent;
@@ -44,7 +45,6 @@ input[type=range]::-webkit-slider-runnable-track {
   width: 100%;
   height: 12px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
   background: #576066ff;
   border-radius: 10px;
@@ -68,7 +68,6 @@ input[type=range]::-moz-range-track {
   width: 100%;
   height: 12px;
   cursor: pointer;
-  animate: 0.2s;
   box-shadow: 0px 0px 0px #000000;
   background: #576066ff;
   border-radius: 10px;
@@ -87,7 +86,6 @@ input[type=range]::-ms-track {
   width: 100%;
   height: 12px;
   cursor: pointer;
-  animate: 0.2s;
   background: transparent;
   border-color: transparent;
   color: transparent;
