--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,12 @@ body {
   grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: repeat(4, 1fr);
   border: 10px solid #576066;
-	background-color: #F8F4E3;
-	gap: 0.08em;
-	border-radius: 1%;
-	padding: 0.15em;
+	background-color: #576066;
+  grid-gap: 1px;
 }
 
 .grid {
-    border-style: solid;
-    border-width: 1px;
+    background-color: #F8F4E3;
 }
 
 /*Slider Customization */
