--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,28 @@
 body {
-    background-color: #F8F4E3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  font: 2.2vh Helvetica-Neue, Helvetica, sans-serif;
+  background-color: #F8F4E3;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  display: flex;
+}
+
+.buttoncontainer {
+  display: flex;
+  padding: 50px;
+  width: 200px;
+  flex-direction: column;
+}
+
+.slidercontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 200px;
 }
 
 #gridcontainer {
@@ -116,9 +135,59 @@ input[type=range]:focus::-ms-fill-upper {
   background: #576066ff;
 }
 
-.slidercontainer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 400px;
+#swatch{
+  background: white;
+  box-shadow: 1em 1em 1em rgba(0, 0, 0, .1);
+  display: flex;
+  flex-direction: column;
 }
+
+#swatch .info{
+  padding: 1em;
+}
+
+#swatch h1{
+  margin: 0;
+  text-transform: uppercase;
+}
+
+#swatch h2{
+  font-weight: normal;
+  margin: 0;
+}
+
+input[type="color"] {
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
+  background: none;
+  border: 0;
+  cursor: pointer;
+  height: 15em;
+  padding: 0;
+  width: 15em;
+}
+
+*:focus{
+  border-radius: 0;
+  outline: none;
+}
+
+::-webkit-color-swatch-wrapper {
+  padding: 0;
+}
+
+::-webkit-color-swatch{
+  border: 0;
+  border-radius: 0;
+}
+
+::-moz-color-swatch,
+::-moz-focus-inner{
+  border: 0;
+}
+
+::-moz-focus-inner{
+  padding: 0;
+}
+
